# fastblog

./: .eslintrc.json  .gitignore  LICENSE  README.md  SETUP.md  jest.setup.js  next.config.js  package-lock.json  package.json  setup.sh  tailwind.config.js  tsconfig.json
backend/: Cargo.toml  README.md  env.example  seed_articles.sql
backend/migrations/: 001_init.sql  002_article_enhancements.sql  20240101000005_add_user_follows.sql
backend/src/: config.rs  database.rs  main.rs
backend/src/handlers/: admin.rs  articles.rs  auth.rs  engagement.rs  mod.rs  search.rs  upload.rs  users.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/models/: article.rs  engagement.rs  mod.rs  publication.rs  user.rs
backend/src/services/: article.rs  auth.rs  engagement.rs  mod.rs  search.rs  user.rs
backend/uploads/articles/: .gitkeep
frontend/: README.md  astro.config.mjs  env.example  package-lock.json  package.json  tailwind.config.js
frontend/src/: middleware.ts
frontend/src/components/: Header.astro
frontend/src/islands/: ArticleEditor.tsx  AuthButtons.tsx  BookmarkButton.tsx  ClapButton.tsx  Comments.tsx  DraftSidebar.tsx  LoginForm.tsx  ProfileActionButton.tsx  ProfileForm.tsx  RegisterForm.tsx  SearchBox.tsx  ShareButtons.tsx  ThemeToggle.tsx  TrendingArticles.tsx  UserFeed.tsx  UserRecommendations.tsx  WritePage.tsx
frontend/src/layouts/: Layout.astro
frontend/src/pages/: 404.astro  500.astro  @[username].astro  feed.astro  index.astro  library.astro  login.astro  profile.astro  register.astro  stats.astro  trending.astro  write.astro
frontend/src/styles/: global.css
src/app/: layout.tsx  not-found.tsx  page.tsx
src/app/__tests__/: page.test.tsx
src/components/: BlogCard.tsx  BlogFilters.tsx  BlogList.tsx  Footer.tsx  Header.tsx  Newsletter.tsx
src/data/: posts.ts
src/styles/: globals.css
src/types/: post.ts
src/utils/: date.ts
(+5 files in other folders)
